test/cases/compile_errors/struct_depends_on_itself_via_non_initial_field.zig
const A = struct {
    a: u8,
    bytes: [@sizeOf(A)]u8,
};

comptime {
    _ = A;
}

// error
//
// :1:11: error: struct 'tmp.A' depends on itself
